--- a/dplyr/README.Rmd
+++ b/dplyr/README.Rmd
@@ -9,11 +9,10 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(dplyr)
 ```
 
 
-## 1.Create(`muate()`) sum and percentage of sum for columns
+## 1.Usage of `mutate_all()`, `mutate_if()` and `mutate_at()`
 
 Use scoped variants of `summarise()`, `mutate(`) and `transmute()` when handling many columns. 
 
@@ -25,6 +24,9 @@ Use scoped variants of `summarise()`, `mutate(`) and `transmute()` when handling
     2. Use function name(e.g. sum,mean)
     3. Use purrr syntax(`~.x`)
 
+```{r}
+library(dplyr)
+```
 
 
 Instead of doing:
@@ -52,4 +54,83 @@ mtcars %>%
     head() %>%
     knitr::kable()
 ```
+
+## 2.Programming with dplyr(variable, argument and string conversions)
+
+When Programming with **tidyverse(dplyr,ggplot)**, we need to make conversions betwwen string, argument and variable frequently. It can be really annoying if we don't know what to do. Luckily,with `rlang` package, we can perform these calculations easily.
+
+```{r}
+library(dplyr)
+library(rlang)
+```
+
+### No functions
+
+#### Convert String to Variable
+
+```{r}
+x <- c(1,2,3) 
+y <- c("a","b","c")
+# convert and evaluate
+print(eval_tidy(sym("x")))
+cat("--------------------------------\n")
+# convert a list of string to variable and evaluate
+for(v in syms(list("x","y"))){
+    print(eval_tidy(v))
+}
+```
+
+#### Convert variable to string
+
+```{r}
+quo(x) %>%
+    as_name()
+cat("-------------\n")
+for(x in quos(x,y,z)){
+    print(as_name(x))
+}
+```
+
+#### Evaluate string as code
+```{r}
+print(eval_tidy(parse_expr("sum(c(1,2,3))")))
+cat("more steps required if string is saved to a variable\n--------------------------------\n")
+
+# one more conversion is required is the string is saved to a variable
+x <- "sum(c(1,2,3))"
+quo(x) %>%
+    eval_tidy() %>%
+    parse_expr() %>%
+    eval_tidy() %>%
+    print()
+
+cat("data from global environment\n-----------------------\n")
+x <- 1
+y <- 2
+z <- 3
+for(arg in parse_exprs("x == 1;y > 1;is.numeric(z)")){
+    print(eval_tidy(arg)) # default environment: global_env()
+}
+cat("use custom data\n---------------------\n")
+for(arg in parse_exprs("x == 1;y > 1;is.numeric(z)")){
+    print(eval_tidy(arg,data = list(x=2,y=0,z="a"))) # custom data
+}
+
+```
+
+#### Turn code in to string
+
+```{r}
+x <- 5
+quo(x+5) %>% 
+    quo_text()
+cat("-------------------------\n")
+for(arg in quos(x+5,y >2,z != 3)){
+    print(quo_text(arg))
+}
+```
+
+
+
+### In functions
 
