--- a/dplyr/README.Rmd
+++ b/dplyr/README.Rmd
@@ -138,7 +138,7 @@ for(arg in quos(x+5,y >2,z != 3)){
 
 ### In functions
 
-#### Turn string into code
+#### Turn string into bariable
 
 ```{r}
 library(dplyr)
