--- a/dplyr/README.Rmd
+++ b/dplyr/README.Rmd
@@ -138,7 +138,7 @@ for(arg in quos(x+5,y >2,z != 3)){
 
 ### In functions
 
-#### Turn string into bariable
+#### Turn string into variable
 
 ```{r}
 library(dplyr)
@@ -153,6 +153,20 @@ get_avg <- function(g){
     )
 }
 
-
 get_avg("Species")
+```
+
+
+```{r}
+library(dplyr)
+library(ggplot2)
+library(rlang)
+
+color_by <- function(type){
+    p <- ggplot(data = iris,aes(x = Sepal.Length, y = Sepal.Width)) +
+        geom_point(aes(color = !!sym(type)))
+    return(p)
+}
+
+color_by("Species")
 ```
